--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,9 @@ __pycache__
 .idea
 .venv
 data/
+!data/bordeaux_maison_geolocalized.csv
+!data/bordeaux_appartement_geolocalized.csv
+!data/lille_maison_geolocalized.csv
+!data/lille_appartement_geolocalized.csv
 .env
 models/
