--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-pandas
-matplotlib
-seaborn
-scikit-learn
-xgboost
-fastapi
-uvicorn
-pydantic
-pytest
-httpx
+version https://git-lfs.github.com/spec/v1
+oid sha256:5636ec4629fd38c90a5a83ac3a90dff6f5e5fd419cff70bc798038269540c512
+size 100
