--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,6 @@ __pycache__
 .idea
 .venv
 data/
-!data/bordeaux_maison_geolocalized.csv
-!data/bordeaux_appartement_geolocalized.csv
-!data/lille_maison_geolocalized.csv
-!data/lille_appartement_geolocalized.csv
+!data/geolocalized/
 .env
 models/
